WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116552
JSC Assertion tests failures on MIPS.
https://bugs.webkit.org/show_bug.cgi?id=116552
Summary
JSC Assertion tests failures on MIPS.
Balazs Kilvady
Reported
2013-05-21 09:43:41 PDT
Many tests fails with ASSERTION FAILED: (cond == Overflow) || (cond == Signed) || (cond == Zero) || (cond == NonZero) webkit/Source/JavaScriptCore/assembler/MacroAssemblerMIPS.h(1626)
Attachments
Fix branchAdd32 functions.
(3.54 KB, patch)
2013-05-21 10:43 PDT
,
Balazs Kilvady
no flags
Details
Formatted Diff
Diff
Fix branchAdd32 functions.
(3.45 KB, patch)
2013-05-26 04:47 PDT
,
Balazs Kilvady
no flags
Details
Formatted Diff
Diff
Fix branchAdd32 functions.
(3.49 KB, patch)
2013-06-05 03:11 PDT
,
Balazs Kilvady
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2013-05-21 09:46:06 PDT
ARM traditional had a similar bug:
https://bugs.webkit.org/show_bug.cgi?id=116538
Balazs Kilvady
Comment 2
2013-05-21 10:43:49 PDT
Created
attachment 202450
[details]
Fix branchAdd32 functions.
Balazs Kilvady
Comment 3
2013-05-21 13:20:38 PDT
mozilla, SunSpider and v8 tests succeeded with this patch.
Darin Adler
Comment 4
2013-05-23 13:20:34 PDT
Comment on
attachment 202450
[details]
Fix branchAdd32 functions. View in context:
https://bugs.webkit.org/attachment.cgi?id=202450&action=review
> Source/JavaScriptCore/assembler/MacroAssemblerMIPS.h:1633 > + // ASSERT((cond == Overflow) || (cond == Signed) || (cond == Zero) || (cond == NonZero));
Why leave in this other assertion commented out? Please just delete it.
Balazs Kilvady
Comment 5
2013-05-26 04:47:25 PDT
Created
attachment 202913
[details]
Fix branchAdd32 functions. Wrong comment removed; rebased on
r150711
.
Balazs Kilvady
Comment 6
2013-06-05 03:11:54 PDT
Created
attachment 203782
[details]
Fix branchAdd32 functions. Rebased on
r151202
.
Geoffrey Garen
Comment 7
2013-06-05 09:54:34 PDT
Comment on
attachment 203782
[details]
Fix branchAdd32 functions. r=me
WebKit Commit Bot
Comment 8
2013-06-05 10:16:25 PDT
Comment on
attachment 203782
[details]
Fix branchAdd32 functions. Clearing flags on attachment: 203782 Committed
r151228
: <
http://trac.webkit.org/changeset/151228
>
WebKit Commit Bot
Comment 9
2013-06-05 10:16:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug